description = "filebrowser application"

apply plugin: "war"
apply plugin: "java"
apply plugin: "jetty"
apply plugin: "eclipse"

httpPort = 80
jettyRun.contextPath = "/"

sourceCompatibility = "1.6"
targetCompatibility = "1.6"

group = "com.dragansah"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()

    // All things JBoss/Hibernate
    mavenRepo name: "JBoss", urls: "http://repository.jboss.org/nexus/content/groups/public/"

    // For stable versions of the tapx libraries
    mavenRepo name: "HLS", urls: "http://howardlewisship.com/repository/"

    // For non-stable versions of the tapx libraries
    mavenRepo name: "HLS Snapshots", urls: "http://howardlewisship.com/snapshot-repository/"

    // For access to Apache Staging (Preview) packages
    mavenRepo name: "Apache Staging", urls: "https://repository.apache.org/content/groups/staging"
    
    mavenRepo name: "Tapestry5 JQuery", urls: "http://nexus.devlab722.net/nexus/content/repositories/releases"
}

// This simulates Maven's "provided" scope, until it is officially supported by Gradle
// See http://jira.codehaus.org/browse/GRADLE-784

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += configurations.provided
    }
    test {
        compileClasspath += configurations.provided
        runtimeClasspath += configurations.provided
    }
}

dependencies {
    compile "org.apache.tapestry:tapestry-core:5.3.5"
    compile "org.got5:tapestry5-jquery:3.3.2"
    compile "commons-io:commons-io:1.3.2"
    compile "org.jasig.cas.client:cas-client-core:3.2.1"

    provided "javax.servlet:servlet-api:2.5"
}

test {
    useTestNG()

    options.suites("src/test/conf/testng.xml")

    systemProperties["tapestry.service-reloading-enabled"] = "false"
    systemProperties["tapestry.execution-mode"] = "development"

    maxHeapSize = "600M"

    jvmArgs("-XX:MaxPermSize=256M")

    enableAssertions = true
}
